fix: fix toolip z-index

--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -22,6 +22,7 @@
     color: #333;
     letter-spacing: -0.02em;
     border: 1px solid #e3e3e3;
+    z-index: 1;
   }
   [data-label-shift]::before {
     margin-left: -10px;
